@@ -38,6 +38,9 @@
 19. If 'Basic'/'Personal' is selected in intitial settings wizard, then enable
     'stop playback' and 'stop dynamizer' options.
 20. Store data under XDG_DATA_HOME (~/.local/share)
+21. Improve responsiveness when loading covers. Only attempt to locate and load
+    2 covers in the GUI event loop per iteration. More than this is handled in
+    a separate thread.
 
 1.1.3
 -----
